tests/baselines/reference/parserStrictMode8.errors.txt
parserStrictMode8.ts(2,10): error TS1100: Invalid use of 'eval' in strict mode.


==== parserStrictMode8.ts (1 errors) ====
    "use strict";
    function eval() {
             ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    }